# serializer version: 1
# name: test_generate_from_external_service
  'The weather in Paris is currently misty with a temperature of -0.55°C, feeling like -3.75°C, and a humidity of 95%.'
# ---
# name: test_generate_from_knowledge_base
  'Some nice things to see in Paris include the Eiffel Tower for its panoramic views, the Louvre Museum for its art masterpieces like the Mona Lisa, and the Notre-Dame Cathedral for its Gothic architecture. Additionally, you can explore the Champs-Élysées leading to the Arc de Triomphe and visit Montmartre with the Basilica of the Sacré-Cœur.'
# ---
# name: test_graph_with_insurance_queries[What's the trend in auto insurance costs over the last 3 years?]
  'The average expenditures for auto insurance have been consistently increasing over the last three years, from $945.22 in 2016 to $1008.35 in 2017, showing a change of 5.4% in 2016 and 6.7% in 2017. The trend indicates a rising cost in auto insurance.'
# ---
# name: test_graph_with_knowledge_query
  'Some nice things to see in Paris include the Eiffel Tower, which offers panoramic views from its observation decks, the Louvre Museum with masterpieces like the Mona Lisa, and the Gothic architectural marvel of Notre-Dame Cathedral. The Champs-Élysées, leading to the Arc de Triomphe, and Montmartre with the Basilica of the Sacré-Cœur are also must-visit spots.'
# ---
# name: test_graph_with_weather_query
  'The weather in Paris is currently 6.75°C with a feels-like temperature of 2.7°C. Humidity is at 83%, and there is light rain.'
# ---
# name: test_retrieve_with_travel_knowledge_base
  list([
    Document(id='knowledge_base[0]', metadata={}, page_content="Paris, the 'City of Light,' boasts iconic landmarks such as the Eiffel Tower, offering panoramic views from its observation decks. The Louvre Museum, home to masterpieces like the Mona Lisa, attracts art enthusiasts worldwide. Notre-Dame Cathedral, a Gothic architectural marvel, stands on the Île de la Cité. The Champs-Élysées, lined with shops and cafes, leads to the Arc de Triomphe, honoring those who fought for France. Montmartre, with its artistic heritage, features the Basilica of the Sacré-Cœur atop its hill."),
    Document(id='knowledge_base[1]', metadata={}, page_content="London, a vibrant metropolis, features the historic Tower of London, housing the Crown Jewels. The British Museum showcases a vast collection of world art and artifacts. Buckingham Palace, the monarch's residence, is famed for the Changing of the Guard ceremony. The Houses of Parliament and Big Ben are iconic symbols along the River Thames. The London Eye offers a rotating perspective of the city's skyline."),
  ])
# ---
